# impresso-schemas

./: .editorconfig  .flake8  .gitignore  .prettierrc  AGENT.md  CONSOLIDATION_PLAN.md  LICENSE  Makefile  Pipfile  README.md  SCHEMA_CONVENTIONS.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
docs/: audio_record-defs-time_coordinates.md  audio_record-dependentrequired.md  audio_record-properties-cdt.md  audio_record-properties-id.md  audio_record-properties-iiif_base_uri.md  audio_record-properties-s-items-properties-u-items-properties-speaker.md  audio_record-properties-s-items-properties-u-items-properties-ss-items-properties-t-items-properties-tx.md  audio_record-properties-s-items-properties-u-items-properties-ss-items-properties-t-items.md  audio_record-properties-s-items-properties-u-items-properties-ss-items-properties-t.md  audio_record-properties-s-items-properties-u-items-properties-ss-items.md  audio_record-properties-s-items-properties-u-items-properties-ss.md  audio_record-properties-s-items-properties-u-items.md  audio_record-properties-s-items-properties-u.md  audio_record-properties-s-items.md  audio_record-properties-s.md  audio_record.md  audio_record_contentitem-properties-additional_metadata-items-properties-value.md  audio_record_contentitem-properties-additional_metadata-items.md  audio_record_contentitem-properties-additional_metadata.md  audio_record_contentitem-properties-dur.md  audio_record_contentitem-properties-id.md  audio_record_contentitem-properties-lg.md  audio_record_contentitem-properties-rr.md  (+685 more)
(+95 files in other folders)
